# Dicom_RT_and_Images_to_Mask

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Data.xlsx  Data_Curation.ipynb  Data_Curation_and_Predictions_to_RT.ipynb  DicomRTTool.py  Distribute_Train_Test_Validation.py  Image_Array_And_Mask_From_Dicom_RT.py  MANIFEST.in  README.md  Test.py  build_flair_dicom_struct.py  glio_parser.py  pyproject.toml  requirements-conformance.txt  requirements.txt  setup.py  temp.py  test.py  test_all.py  tests.py
.github/workflows/: codeql-analysis.yml  conformance.yml  new_test.yml  python-publish.yml  test.yml
AnonDICOM/: CT.1.2.246.352.221.4626773895497922739.17556984125564420260.dcm  CT.1.2.246.352.221.5639662398897860285.10020668819012843167.dcm  CT_2.dcm  CT_3.dcm  RS.1.2.246.352.221.5295756759917696191.17297108549342758074.dcm
Examples/: DICOMRTTool_Tutorial.ipynb  DICOMRTTool_manuscript.ipynb  Old_Legacy_Notebook.ipynb
Examples/nifti/: MRN_Path_To_Iteration.xlsx
evaluation/: README.md  __init__.py  compare_with_csharp.py  csharp_eval.py
src/: DicomRTTool.py  Distribute_Train_Test_Validation.py  Main.py  Plot_Scroll_Images.py  test_all.py
src/DicomRTTool/: ReaderWriter.py  ReaderWriter.py~  Tools.py  Viewer.py  __init__.py  key_list.txt  template_RS.dcm
src/DicomRTTool/Services/: DicomBases.py  StaticScripts.py
src/DicomRTTool/_internal/: __init__.py  anonymizer.py  indexer.py  rt_contours.py
tests/: conformance.yaml  conftest.py  synthetic.py  test_anonymizer.py  test_compat.py  test_conformance.py  test_create_manifest.py  test_csharp_parity.py  test_dose.py  test_geometry_preservation.py  test_indexer.py  test_mask_rasterization.py  test_nifti_export.py  test_nonuniform_z_slice_matching.py  test_partial_data.py  test_per_roi_export.py  test_plan_and_dose_linkage.py  test_resample.py  test_rewrite_rt.py  test_synthetic_roundtrip.py  test_writer.py
